2005-08-14  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-key.c:
    * libseahorse/seahorse-key.h: Fix constness gcc 4.0 warnings.
    * libseahorse/seahorse-widget.c: Fix complaints when closing
    * src/seahorse-keyserver-results.ui: Fix menu warning
    * src/seahorse-key-manager.c: 
    * src/seahorse-keyserver-results.c: Fix tree warnings
    * agent/gtk-secure-entry.c: Supress warning
    * agent/seahorse-agent.c: 
    * src/main.c: Force exit on all warnings in debug mode    
    * agent/seahorse-agent-cache.c: Initialize memory properly
    * agent/seahorse-agent-io.c: Debug logging for agent communications

2005-07-27  Nate Nielsen  <nielsen@memberwebs.com>
    
    * NEWS: New release 0.7.9
    * configure.in: New version number 0.8
    * src/seahorse-key-manager.c: Fix problem with compiling
    without WITH_KEYSERVER (bug #310682)
    
2005-07-18  Nate Nielsen  <nielsen@memberwebs.com>

    * help/C/seahorse.xml: Removed portions of documentation which
    don't apply to stable branch.
    
2005-07-17 Adam Schreiber <sadam@clemson.edu>
	* libseahorse/seahorse-key-store.c:
        * libseahorse/seahorse-multi-source.c: Patch from Flavio daCosta
          (bug #310214)

2005-07-11 Adam Schreiber <sadam@clemson.edu>
	* help/C/seahorse.xml: Added text for Preferences(bug #309360)

2005-07-09 Adam Schreiber <sadam@clemson.edu>
	* help/C/seahorse.xml: Added text for File Manager(bug #309360)

2005-07-04 Adam Schreiber <sadam@clemson.edu>
	* help/C/seahorse.xml: Added text for Text Editor(bug #309360)

2005-07-03  Adam Schreiber <sadam@clemson.edu>
    * src/seahorse-generate-select.glade: Fix problem where pressing
    <return> doesn't activate continue button.
    * help/C/seahorse.xml: Begin Documentation Overhaul (bug #309360)
    
2005-07-02  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-keyserver-search.glade: Fix problem where pressing
    <return> doesn't activate search button. 