@@ -1,5 +1,8 @@
 2005-08-14  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-hkp-source.c:
+    * libseahorse/seahorse-ldap-source.c: Add extra lines between keys 
+    retrieved from keyservers.
     * libseahorse/seahorse-key.c:
     * libseahorse/seahorse-key.h: Fix constness gcc 4.0 warnings.
     * libseahorse/seahorse-widget.c: Fix complaints when closing
